# libevent-server

./: .gitignore  README.md  test.txt  解决冲突示例文件.txt
CppExperience/: .gitignore  CppExperience.sln  CppExperience.vcxproj  STL迭代器.cpp  STL迭代器失效.cpp  main.cpp  智能指针.cpp  消息队列和共享内存.cpp
WindowsServerPlatform/: WindowsServerPlatform.sln
WindowsServerPlatform/CenterServer/: BaseCenterServer.cpp  BaseCenterServer.h  CenterServer.vcxproj  CenterServer.vcxproj.filters  CenterServerManage.cpp  CenterServerManage.h  CenterServerModule.cpp  main.cpp  main.h
WindowsServerPlatform/Common/: Common.vcxproj  Common.vcxproj.filters  MD5.cpp  RedisBase.cpp  RedisCenter.cpp  RedisCommon.cpp  RedisLoader.cpp  RedisLogon.cpp  Util.cpp  framework.h  pch.h  win32fixes.c
WindowsServerPlatform/GameManage/: BaseMainManage.cpp  GameDataBaseHandle.cpp  GameDesk.cpp  GameMainManage.cpp  GameManage.vcxproj  GameManage.vcxproj.filters  framework.h  pch.h
WindowsServerPlatform/Kernel/: DataBase.cpp  DataLine.cpp  GameLogManage.cpp  Kernel.vcxproj  Kernel.vcxproj.filters  Lock.cpp  ServerTimer.cpp  Stdafx.cpp  configManage.cpp  dllmain.cpp  framework.h  log.cpp  pch.h
WindowsServerPlatform/LoaderServer/: LoaderServer.vcxproj  LoaderServer.vcxproj.filters  LoaderServerModule.cpp  LoaderServerModule.h  main.cpp  main.h
linuxserverplatform/: README.md  linuxserverplatform.sln  启动程序注意事项.txt  程序优化.txt
linuxserverplatform/src/: Lock.h  (+2 more)
linuxserverplatform/src/GameManage/: BaseMainManage.cpp  CMakeLists.txt  GameDataBaseHandle.cpp  GameDesk.cpp  GameMainManage.cpp  Makefile  gameUserManage.cpp
(+505 files in other folders)
